added lomap2 to env

--- a/env.yml
+++ b/env.yml
@@ -4,4 +4,7 @@ channels:
   - defaults
 dependencies:
   - biosimspace
+  - selfies
+  - openbabel
+  - lomap2
 prefix: /Users/jscheen/miniconda3/envs/biosimspace-dev
